- removed javolution FastList dependency, moved to eclipse-collections for backing of recycled, performance collections